Improve addition algo